don't try to reset the model twice

load() is already called when Contaiment::destroyedChanged
gets triggered so calling it immediately is useless.

This also caused plasma to crash as described in 471292

BUG:471292